<resources>
    <string name="app_name">SocialMediaApp-1</string>

    <string name="btmnav_home_title">Home</string>
    <string name="btmnav_search_title">Search</string>
    <string name="btmnav_add_title">Add</string>
    <string name="btmnav_activity_title">Activity</string>
    <string name="btmnav_profile_title">Profile</string>

    <string name="profile_name_placeholder">Profile_name</string>
    <string name="home_fragment_actionbar_title">Discover</string>

    <string name="user_story_title">your story</string>
    <string name="number_placeholder">234</string>
    <string name="view_all_comments">View all comments</string>
    <string name="caption_placeholder">Profile_name Caption...</string>

    <!--    Strings used in Profile Fragment-->
    <string name="tv_post_title">Posts</string>
    <string name="tv_Followers_title">Followers</string>
    <string name="tv_Following_title">Following</string>
    <string name="name_placeholder">User Name</string>
    <string name="bio_placeholder">User Bio...</string>
    <string name="tv_edit_profile">Edit Profile</string>

    <string name="settings_title">Settings</string>
    <string name="activity_title">Activity</string>

    <!--    Strings used in Activity Fragment-->
    <string name="tv_follow_requests">Follow Requests</string>
    <string name="tv_follow_requests_instruction">Approve or Ignore Requests</string>
    <string name="tv_today">Today</string>
    <string name="tv_yesterday">Yesterday</string>
    <string name="tv_this_week">This Week</string>
    <string name="tv_this_month">This Month</string>
    <string name="tv_earlier">Earlier</string>

    <!--    Strings used in Notification -->
    <string name="notification_liked_story"> liked your story.</string>
    <string name="notification_liked_post"> liked your post.</string>
    <string name="notification_started_following"> started following you.</string>
    <string name="notification_commented"> commented on your post</string>
    <string name="notification_follow_request"> requested to follow you.</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>


    <string name="empty_field_message">Don\'t leave the fields empty</string>
    <string name="short_password">Password should consist at least 6 characters</string>

    <!--    Strings used in Edit Profile Fragment -->
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>

    <!--    Strings used in Follow User Fragment -->
    <string name="follow">Follow</string>

    <!--    Unique keys / identifiers -->
    <string name="follow_user_bundle_key">follow_user_bundle_key</string>
    <string name="USER_FOLLOW_STATUS_REQUESTED">Requested</string>
    <string name="USER_FOLLOW_STATUS_FOLLOWING">Following</string>


</resources>