<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/activity_rv_profile_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/placeholder_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_rv_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"/>

    <TextView
        android:id="@+id/activity_rv_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/notification_liked_post"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activity_rv_imageview"
        app:layout_constraintStart_toEndOf="@id/activity_rv_profile_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_rv_imageview"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/img1"
        app:layout_constraintBottom_toBottomOf="@+id/activity_rv_profile_image"
        app:layout_constraintEnd_toEndOf="@id/activity_rv_confirm_btn"
        app:layout_constraintStart_toEndOf="@id/activity_rv_textview"
        app:layout_constraintTop_toTopOf="@+id/activity_rv_profile_image"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/activity_rv_confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="12sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/activity_rv_profile_image"
        app:layout_constraintEnd_toStartOf="@id/activity_rv_delete_btn"
        app:layout_constraintStart_toEndOf="@id/activity_rv_imageview"
        app:layout_constraintTop_toTopOf="@+id/activity_rv_profile_image"
        android:layout_marginStart="16dp"
        android:backgroundTint="#3797EF"
        android:minHeight="40dp"
        android:minWidth="0dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <Button
        android:id="@+id/activity_rv_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="12sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/activity_rv_confirm_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/activity_rv_confirm_btn"
        app:layout_constraintTop_toTopOf="@+id/activity_rv_confirm_btn"
        android:layout_marginStart="8dp"
        android:backgroundTint="#3797EF"
        android:minHeight="40dp"
        android:minWidth="0dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>